Fixed an issue with the top section collapsing on very narrow devices. Added full Myriad logo on full sized desktop screens. Removed vouching for exchanges as "secure".

--- a/src/sass/theme/_main.scss
+++ b/src/sass/theme/_main.scss
@@ -79,7 +79,8 @@
 #hero {
   display: table;
   width: 100%;
-  min-height: calc(100vh - 2vh);
+  min-height: 98vh;
+  padding: 100px 0;
   color: $color-white;
   background: url(/images/hero-background.jpg) no-repeat left;
   background-size: cover;
